tests/reference/asr-test_numpy_03-e600a49.stderr
warning: The module 'numpy' located in $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py cannot be loaded
 --> tests/../integration_tests/test_numpy_03.py:2:1
  |
2 | from numpy import reshape, empty, int32, float64
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ imported here

semantic error: Decorator: vertorize is not supported
   --> $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py:421:2
    |
421 | @vertorize
    |  ^^^^^^^^^ 
